Fixed some missing dependencies, also had to change version to JDK 17 due to issues with JavaFX. updated pom to updated repositories, overall troubleshooting and tweaking